# libelektra

cmake/: ElektraCache.cmake
doc/docker/: buildelektra.sh
doc/vagrant/: buildelektra.sh
src/bindings/swig/: CMakeLists.txt
src/bindings/swig/node/: CMakeLists.txt  kdb.i
